--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,51 @@
     transform: rotate(360deg);
   }
 }
+
+.layout-box {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  overflow: hidden;
+}
+
+.top-bar {
+  width: 100%;
+  height: 68px;
+  background: linear-gradient(to right, #fe76c2, #37c7f2);
+
+  display: flex;
+  flex-shrink: 0; 
+
+  justify-content: center;
+  align-items: center;
+}
+
+.top-bar > h1 {
+    color: #ffffff;
+    font-size: 22px;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+
+  max-width: 750px;
+
+  margin: auto;
+  
+  padding-top: 50px;
+
+}
+
+#userTextArea {
+  display:inline-block;
+  padding:15px 10px;
+  line-height:140%;
+}
+
+.MuiButtonBase-root {
+  margin-top: 20px;
+  margin-right: 10px;
+}
+
