--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+html, body, #app, #app>div {
+  height: 100%
+}
+
 .App {
   text-align: center;
 }
@@ -47,7 +51,8 @@
 .top-bar {
   width: 100%;
   height: 68px;
-  background: linear-gradient(to right, #fe76c2, #37c7f2);
+  /*background: linear-gradient(to right, #fe76c2, #37c7f2);*/
+  background-color: #282c34;
   display: flex;
   flex-shrink: 0; 
   justify-content: center;
@@ -69,9 +74,13 @@
 }
 
 #userTextArea {
-  display:inline-block;
-  padding:15px 10px;
-  line-height:140%;
+  display: inline-block;
+  padding: 15px 10px;
+  line-height: 140%;
+}
+
+#btnStack {
+  margin-top: 2rem;
 }
 
 .MuiButtonBase-root {
