--- a/src/App.css
+++ b/src/App.css
@@ -73,10 +73,12 @@ html, body, #app, #app>div {
 
 }
 
-#userTextArea {
+#textfield {
   display: inline-block;
   padding: 15px 10px;
   line-height: 140%;
+  caret-color: #3f51b5;
+  margin-bottom: 2rem;
 }
 
 #btnStack {
