--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,7 @@ html, body, #app, #app>div {
   padding: 15px 10px;
   line-height: 140%;
   caret-color: #3f51b5;
+  background: #e8e8e854;
   margin-bottom: 2rem;
 }
 
