--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,10 @@ html, body, #app, #app>div {
   position: relative;
 }
 
+.editor {
+  display: grid;
+}
+
 #textfield {
   display: inline-block;
   padding: 15px 10px;
@@ -100,3 +104,26 @@ html, body, #app, #app>div {
   margin-right: 10px;
 }
 
+.circle-green {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  background-color: rgb(84, 230, 139);
+  border-radius: 50%;
+}
+
+.circle-red {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  background-color: rgb(218, 50, 50);
+  border-radius: 50%;
+}
+
+.green {
+  color: rgb(84, 230, 139)
+}
+
+.red {
+  color: rgb(218, 50, 50);
+}
