--- a/src/App.css
+++ b/src/App.css
@@ -106,6 +106,9 @@ html, body, #app, #app>div {
   height: 15px;
   background-color: rgb(84, 230, 139);
   border-radius: 50%;
+  -webkit-box-shadow: 0.5px 0.5px 0.5px 0.5px rgba(50, 50, 50, 0.75);
+  -moz-box-shadow: 0.5px 0.5px 0.5px 0.5px rgba(50, 50, 50, 0.75);
+  box-shadow: 0.5px 0.5px 0.5px 0.5px rgba(50, 50, 50, 0.75);
 }
 
 .circle-red {
@@ -114,10 +117,13 @@ html, body, #app, #app>div {
   height: 15px;
   background-color: rgb(218, 50, 50);
   border-radius: 50%;
+  -webkit-box-shadow: 0.5px 0.5px 0.5px 0.5px rgba(50, 50, 50, 0.75);
+  -moz-box-shadow: 0.5px 0.5px 0.5px 0.5px rgba(50, 50, 50, 0.75);
+  box-shadow: 0.5px 0.5px 0.5px 0.5px rgba(50, 50, 50, 0.75);
 }
 
 .green {
-  color: rgb(84, 230, 139)
+  color: rgb(84, 230, 139);
 }
 
 .red {
